@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                             https://maven.apache.org/maven-v4_0_0.xsd">
+                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.worldbuilding</groupId>
@@ -15,12 +15,8 @@
     <javafx.version>24.0.1</javafx.version>
   </properties>
 
-  <options>
-    <option>--add-modules</option>
-    <option>javafx.controls,javafx.fxml,javafx.web</option>
-  </options>
   <dependencies>
-    <!-- JavaFX core modules -->
+    <!-- JavaFX -->
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
@@ -36,13 +32,13 @@
       <artifactId>javafx-web</artifactId>
       <version>${javafx.version}</version>
     </dependency>
-    <!-- Base de datos SQLite-->
+
+    <!-- SQLite JDBC -->
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>sqlite-jdbc</artifactId>
       <version>3.49.1.0</version>
     </dependency>
-
   </dependencies>
 
   <build>
@@ -52,22 +48,24 @@
       </resource>
     </resources>
     <plugins>
-      <!-- Plugin para ejecutar la app JavaFX -->
+      <!-- Plugin JavaFX -->
       <plugin>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <configuration>
           <mainClass>com.worldbuilding.Main</mainClass>
-          <options>
-            <option>--module-path</option>
-            <option>${project.basedir}/extensiones/javafx/lib</option>
-            <option>--add-modules</option>
-            <option>javafx.controls,javafx.fxml,javafx.web</option>
-          </options>
         </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
+      <!-- Plugin compilador -->
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
